# mahjong-score-api

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  memo.md
src/: calc.rs  main.rs  model.rs  transformation.rs
