[package]
name = "mahjong-score-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mahjong-score = { git = "https://github.com/Otohito-Fuse/mahjong-score", branch = "main" }